# eigendeck

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEMO_AUTHORING.md  DEMO_SPEC.md  DESIGN_DECISIONS.md  HANDOFF.md  LLM-EDITING.md  MAC-BUILD.md  README.md  SETUP.md  SINGLE_FILE_PLAN.md  SPEC.md  SQLITE_STORAGE.md  build-cli.sh  export-cli.html  linux-build.sh  mac-build.sh  package-lock.json  package.json  presenter.html  test-shift.html  vite.config.ts
.claude/: settings.local.json
.githooks/: post-commit  pre-commit
dev-log/: 2026-04-02-to-04-14-session.md  2026-04-15-session.md
example-project/: presentation.json
examples/: Untitled-Presentation.eigendeck  Untitled-Presentation.eigendeck-shm  Untitled-Presentation.eigendeck-wal  graph-algorithms.eigendeck  graph-explorer.eigendeck  huda-demo.eigendeck  huda-demo.html  intro-slide.eigendeck  kent-demo.eigendeck  linear-algebra.eigendeck  magnetic-powers.eigendeck-shm  magnetic-powers.eigendeck-wal  simple-test.eigendeck  test-presentation.eigendeck
mathjax-ptsans-bundle/: README.md  package.json  tex-mml-svg-mathjax-ptsans-nosre.js  tex-mml-svg-mathjax-ptsans.js
src/: App.css  App.tsx  export-cli.ts  presenter.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  storage.rs
tools/: bench-datamodel.mjs  bench-json-convert.mjs  bench-junction.mjs  bench-perf.mjs  bench-storage.mjs  bench-wal-vs-delete.mjs  convert-examples.sh  eigendeck-history.mjs  eigendeck.mjs  export-eigendeck.mjs  generate-icons.sh  (+3 more)
(+137 files in other folders)
